# Usagi-dono

./: .gitignore  1760354161-4344-71837.tgz  ANALYSIS_REPORT.md  ANIDBANIMEINFO_INTEGRATION_COMPLETE.md  ANIME_CARD_TWEAKS_IMPLEMENTATION.md  ANIME_CARD_TWEAKS_SUMMARY.md  ANIME_CHAIN_FEATURE.md  ANIME_CHAIN_INTEGRATION_PLANS.md  ANIME_DATA_ARCHITECTURE.md  ANIME_TITLES_FEATURE.md  ANIME_TITLES_IMPLEMENTATION_SUMMARY.md  ANIME_TITLES_QUICKSTART.md  API_BUG_FIX_SUMMARY.md  API_TESTS_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  BACKGROUND_LOADING_IMPLEMENTATION.md  BATCH_OPTIMIZATION_SUMMARY.md  BBCODE_URL_FIX.md  BUILD.md  BUILD_FIX_SUMMARY.md  CARD_CREATION_PERFORMANCE_OPTIMIZATION.md  CARD_FILTERING_FIX.md  CARD_LAYOUT_COMPARISON.md  CARD_TWEAKS_VISUAL_COMPARISON.md  CARD_VIEW_ENHANCEMENTS_SUMMARY.md  CARD_VIEW_TWEAKS_SUMMARY.md  CHAIN_EXPANSION_OPTIONS.md  CHAIN_ORDERING_FIX.md  CHANGES_SUMMARY.md  CHUNK_BASED_WATCH_TRACKING.md  CLASS_DESIGN_ANALYSIS_SUMMARY.md  CLASS_DESIGN_IMPROVEMENTS.md  CMakeLists.txt  CODE_CLEANUP_SUMMARY.md  CODE_FLOW_PROOF.md  CODE_REVIEW_GUIDE.md  CONSOLE_LOG_UNIFICATION.md  CRASHLOG.md  CSV_ADBORG_PARSER_IMPLEMENTATION.md  CSV_ADBORG_SUPPORT.md  (+188 more)
.github/: copilot-instructions.md
.github/workflows/: diag.yaml  windows-build-main.yml  windows-build-tests.yml  windows-build.yml
_codeql_build_dir/tests/: test_aired  test_crashlog  test_episode_column_format  test_epno  test_evangelion_ha_fix  test_export_template_verification  test_hash  test_mylist_221_fix  test_mylist_type_aired  test_mylist_xml_parser  test_url_extraction
_codeql_build_dir/tests/test_aired_autogen/: deps
_codeql_build_dir/tests/test_aired_autogen/include/: test_aired.moc  test_aired.moc.d
_codeql_build_dir/tests/test_anidbapi_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
_codeql_build_dir/tests/test_anidbapi_autogen/6WOMAAC5VZ/: moc_anidbapi.cpp  moc_anidbapi.cpp.d
_codeql_build_dir/tests/test_anidbapi_autogen/GMMMA2IUOX/: moc_qaesencryption.cpp.d
_codeql_build_dir/tests/test_anidbapi_autogen/O7XKYD2PUQ/: moc_ed2k.cpp.d
_codeql_build_dir/tests/test_anidbapi_autogen/include/: test_anidbapi.moc  test_anidbapi.moc.d
_codeql_build_dir/tests/test_anime_titles_autogen/: deps
_codeql_build_dir/tests/test_anime_titles_autogen/6WOMAAC5VZ/: moc_anidbapi.cpp.d
_codeql_build_dir/tests/test_anime_titles_autogen/GMMMA2IUOX/: moc_qaesencryption.cpp.d
_codeql_build_dir/tests/test_anime_titles_autogen/O7XKYD2PUQ/: moc_ed2k.cpp.d
_codeql_build_dir/tests/test_anime_titles_autogen/include/: test_anime_titles.moc  test_anime_titles.moc.d
_codeql_build_dir/tests/test_crashlog_autogen/: deps  moc_predefs.h
_codeql_build_dir/tests/test_episode_column_format_autogen/: deps
_codeql_build_dir/tests/test_epno_autogen/: deps
_codeql_build_dir/tests/test_evangelion_ha_fix_autogen/: deps
_codeql_build_dir/tests/test_export_template_verification_autogen/: deps
_codeql_build_dir/tests/test_hash_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/tests/test_mylist_221_fix_autogen/: deps
_codeql_build_dir/tests/test_mylist_type_aired_autogen/: deps
_codeql_build_dir/tests/test_mylist_xml_parser_autogen/: deps  moc_predefs.h
_codeql_build_dir/tests/test_url_extraction_autogen/: deps  moc_predefs.h
_codeql_build_dir/usagi/usagi_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
anime/: a1.csv  a1002.csv  a10022.csv  a10069.csv  a10110.csv  a10111.csv  a1014.csv  a1015.csv  a10182.csv  a10232.csv  a10254.csv  a10376.csv  a10384.csv  a10407.csv  a10441.csv  a105.csv  a10506.csv  a1052.csv  a1054.csv  a10551.csv  a10571.csv  a10596.csv  a106.csv  a10709.csv  a10779.csv  a1085.csv  a1088.csv  a10889.csv  a10894.csv  a1093.csv  a1094.csv  a10955.csv  a10959.csv  a11123.csv  a112.csv  a11272.csv  a11292.csv  a113.csv  a1135.csv  a11370.csv  (+355 more)
tests/: API_TESTS.md  CMakeLists.txt  CMakeLists.txt.backup  README.md  test_aired.cpp  test_anidb_timeout_retry.cpp  test_anidbapi.cpp  test_anidbfileinfo.cpp  test_anime_mask_parsing.cpp  test_anime_titles.cpp  test_animechain.cpp  test_api_optimization.cpp  test_background_loading.cpp  test_batch_hash_retrieval.cpp  test_batch_localidentify.cpp  test_bitrate_preferences.cpp  test_card_filtering.cpp  test_cardcreationdata_api.cpp  test_chain_filtering_standalone.cpp  test_chain_sorting.cpp  test_compression.cpp  test_crashlog.cpp  test_database_validation.cpp  test_deletion_candidate_display.cpp  test_deletion_queue_debounce.cpp  test_directorywatcher.cpp  test_duplicate_detection.cpp  test_episode_column_format.cpp  test_episode_sorting.cpp  test_epno.cpp  test_evangelion_ha_fix.cpp  test_export_template_verification.cpp  test_file_version_extraction.cpp  test_filter_classes.cpp  test_filter_system.cpp  test_hash.cpp  test_hash_duplicate_reuse.cpp  test_hash_reuse.cpp  test_hash_storage.cpp  test_hasher_card_update_signal.cpp  (+32 more)
tests/data/: README.md  test_csv_adborg.csv  test_minimal_fields.csv  test_mixed_case.csv  test_standard_csv.csv
usagi/: CMakeLists.txt  resource.h  usagi.pro  usagi.pro.user.2.5pre1  usagi.pro.user.3.2-pre1  usagi.pro.user.dd7448e.2.7pre1  usagi.rc
usagi/src/: aired.cpp  aired.h  anidbanimeinfo.cpp  anidbanimeinfo.h  anidbapi.cpp  anidbapi.h  anidbapi_settings.cpp  anidbepisodeinfo.cpp  anidbepisodeinfo.h  anidbfileinfo.cpp  anidbfileinfo.h  anidbgroupinfo.cpp  anidbgroupinfo.h  animecard.cpp  animecard.h  animechain.cpp  animechain.h  animefilter.cpp  animefilter.h  animemask.cpp  animemask.h  animemetadatacache.cpp  animemetadatacache.h  animestats.cpp  animestats.h  animeutils.h  applicationsettings.cpp  applicationsettings.h  autofetchmanager.cpp  autofetchmanager.h  backgrounddatabaseworker.h  cachedanimedata.cpp  cachedanimedata.h  cardepisodeinfo.cpp  cardepisodeinfo.h  cardfileinfo.cpp  cardfileinfo.h  crashlog.cpp  crashlog.h  currentchoicewidget.cpp  (+81 more)
usagi/src/Qt-AES-master/: qaesencryption.cpp
usagi/src/encryption/: config.h  cryptlib.h  misc.h  secblock.h  seckey.h  simple.h  stdcpp.h
usagi/src/hash/: ed2k.cpp  ed2k.h  md4.cpp  md4.h
(+32 files in other folders)
